Fixed when filters-section covered footer in commodities

--- a/src/main/webapp/resources/css/commodities.css
+++ b/src/main/webapp/resources/css/commodities.css
@@ -53,7 +53,6 @@ html,body{
 }
 
 .filters-section{
-	height:200px;
 }
 
 .main__filters-section{
